// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2143,
  "sha256": "cfd6241a6a2f04f5b48fd8d46fe7d5ad704ab1e2a4b33fe784e1fd879aa48d63",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1989,
  "sha256": "018f40d2eec4fb852332e3ad507bdb667c1d9878673c25e870967352e6fdd9ab",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2234,
  "sha256": "1767961bc49ad429e00e612d83c8f3ae463899a6dd57b5ca738577762e8296b9",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2194,
  "sha256": "ab742063e346ffe606b615cc3341fb44f86d937a10cd0e772c16bbbd2a4fef77",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 511,
  "sha256": "013642645d0e6a5a621d70cb4cad49c87e00f460d71c658527043da299f9b45b",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1817,
  "sha256": "36a9275f923fd83093c6eeeaa7e2388239ccd95d3a757ff4681a51fec3a49415",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 549,
  "sha256": "69e386e457b54590c2135db3f8eef0c8b7c6a46c9639cbecc561832355e5f22c",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 465,
  "sha256": "a6fda6f95d5934dd39b7c7d4a1f190b9772ded2b8c82508740f6b2dfb7619d3c",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1874,
  "sha256": "5bc4dd05afc21f43939f3aaeddae8cbbc653a8f1bb0357228065f135c181a80c",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "5449dc16a31f193ec7503dcaa36f7d352e4243d61e7d5b1464e70ba86a293cae",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "b49a5c188f6af94312a0db88db0ef13a9f6bbf3ba4f575038083a6dca950cb6f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "d30b32ad7fc8f08d8606673a2ebf5513616fb2be888384610bb4dc1a25d26dec",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "a6f8aab84db2e5b474de628c435d3f454011d5cde8351b7bb4abe8db9cb181c5",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "8bb05eaca5bf29115792f06f2d787628b1ee0e6b922f5c93201f74969c258c21",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "b09165bd1328a415d8088fe16497012e35f23a83d32bc09fe5b93378c7e1b648",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 47,
  "sha256": "a51c76cbbc0733391bd751a20603ca863be7e69f2caaf1f4d2de40d51f907b09",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "e10508558b0c77c49d8b7f9b76c14e1d0d97f91793f37b3ec19d8931731c3eef",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "612937c8a26b4d441c24b2cf8097ebb4293131468f4852a43c5600a86589fc70",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "33d957f7f30819e060e8a592c369dc16aafa74b6ab77556bac9d0236fd8683bb",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 425,
  "sha256": "f6e469557d33fbfa80df4b3cf84c843345d195b4b887716c2ec4b0ced83c90ba",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "19053f2efa8fae4f51b4729001c05b852a55922d0364d01834ba7efe20366a70",
}
`;
